--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My second repo</title>
 </head>
 <body>
+    <p>amar sonar bangla ami tomai valobasi</p>
+    <p>chirodin tomar akash tomar batash amar kane bajai basi</p>
     
 </body>
 </html>
