--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h3>jatiyo songit</h3>
     <p>amar sonar bangla ami tomai valobasi</p>
     <p>chirodin tomar akash tomar batash amar kane bajai basi</p>
+
     
 </body>
 </html>
