--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h3>jatiyo songit</h3>
     <p>amar sonar bangla ami tomai valobasi</p>
     <p>chirodin tomar akash tomar batash amar kane bajai basi</p>
+    <p>ki darun dekte tmi veja veja chok tomar</p>
     <img src="photo4.jpg" alt="">
 
     
