--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>chirodin tomar akash tomar batash amar kane bajai basi</p>
     <p>ki darun dekte tmi veja veja chok tomar</p>
     <img src="photo4.jpg" alt="">
+    <img src="photo3.jpg" alt="">
 
     
 </body>
