--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,15 @@
     <title>My second repo</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div>
+        <h4>New blog </h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus tenetur tempore facere placeat assumenda
+            quasi fuga qui non. Iusto beatae asperiores expedita, incidunt, pariatur voluptatem blanditiis nobis neque
+            rerum laboriosam, tempore unde ipsam quasi vero eligendi aliquid corrupti. At, optio?
+        </p>
+    </div>
     <h3>jatiyo songit</h3>
     <p>amar sonar bangla ami tomai valobasi</p>
     <p>chirodin tomar akash tomar batash amar kane bajai basi</p>
@@ -15,6 +24,7 @@
     <img src="photo4.jpg" alt="">
     <img src="photo3.jpg" alt="">
 
-    
+
 </body>
+
 </html>
