--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <h4>New blog </h4>
+        <h4>New blog in my side</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus tenetur tempore facere placeat assumenda
             quasi fuga qui non. Iusto beatae asperiores expedita, incidunt, pariatur voluptatem blanditiis nobis neque
             rerum laboriosam, tempore unde ipsam quasi vero eligendi aliquid corrupti. At, optio?
